test/tests/stages/18_structures/invalid_types/invalid_incomplete_structs/incomplete_array_element.lex
-- Lexing ... OK
+
+
@@ Tokens @@
List[31]:
  struct
  identifier(s)
  ;
  struct
  identifier(s)
  identifier(arr)
  [
  const int(3)
  ]
  ;
  struct
  identifier(s)
  {
  int
  identifier(a)
  ;
  int
  identifier(b)
  ;
  }
  ;
  int
  identifier(main)
  (
  void
  )
  {
  return
  const int(0)
  ;
  }
